# fete

./: .gitpod.yml  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.config/: cargo.toml
src/: bus.rs  cpu.rs  lib.rs  main.rs  opcode.rs  ppu.rs  rom.rs
src/cpu/: addr_mode.rs  mod.rs  status.rs  trace.rs
src/opcode/: arrith.rs  branch.rs  cmp.rs  flags.rs  inc_dec.rs  jmp.rs  load.rs  logic.rs  mod.rs  shift.rs  stack.rs  sys.rs  transfer.rs
src/testing/: logger.rs  mod.rs
tests/: nestest.rs
tests/nestest/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
