[package]
name = "fete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
log = "0.4.20"
phf = { version = "0.11.2", default-features = false, features = ["macros"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
test-log = "0.2.14"
