[package]
name = "fete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
log = "0.4.20"
no-panic = "0.1.27"
phf = { version = "0.11.2", default-features = false, features = ["macros"] }
replace_with = { version = "0.1.7", default-features = false }
snafu = { version = "0.7.5", default-features = false }
untrusted = "0.9.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-log = "0.2.14"
