[package]
name = "fete"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
log = "0.4.20"
no-panic = "0.1.27"
phf = { version = "0.11.2", default-features = false, features = ["macros"] }
replace_with = { version = "0.1.7", default-features = false }
snafu = { version = "0.7.5", default-features = false }
untrusted = "0.9.0"

[dev-dependencies]
ctor = "0.2.6"
pretty_assertions = "1.4.0"
test-log = "0.2.14"

[profile.dev.package.'*']
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = 3

[workspace]
members = ["xtask"]
